# passgen-cli

./: Cargo.toml  README.md
expanders/: Cargo.toml
expanders/src/: lib.rs  main.rs
src/: cli.rs  lib.rs  main.rs  prelude.rs  util.rs
src/commands/: custom.rs  hash.rs  mod.rs  patterns.rs  std.rs  uuid.rs
src/data/: mod.rs  us.rs
