[package]
name = "passgen-cli"
version = "0.1.0"
edition = "2021"
authors = ["dyanechi"]
about = "KAKAKAKA"

[toolchain]
channel = "nightly"

[build]
rustflags=["uuid_unstable"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.2.0", features = ["derive"] }
rand = "0.8.5"

[dependencies.uuid]
version = "1.3.0"
features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8", "std", "rng"]

