[build]
rustflags = ["--cfg", "uuid_unstable"]

[package]
name = "rpg"
version = "0.1.0"
edition = "2021"
authors = ["dyanechi"]
about = "KAKAKAKA"

[toolchain]
channel = "nightly"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.2.0", features = ["derive"] }
paste = "1.0.12"
rand = "0.8.5"
regex = "1.7.3"
strum = { version = "0.24.1", features = ["strum_macros"] }
strum_macros = "0.24.3"

expanders = { path = "./expanders" }

[dependencies.uuid]
version = "1.3.0"
features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8", "std", "rng"]

